updated admin previlages
