# routes/users.js
@@ -1,4 +1,4 @@
-const {User, validateUser,validateLogin} = require("../models/userModel");
+const {User, validateUser,validateLogin,validateUsername,validateUserEmail,validateUserPassword} = require("../models/userModel");
 const auth = require("../middleware/authorization");
 const emailVerify = require("../middleware/emailVerify");
 const resetVerify = require("../middleware/resetVerify");
@@ -155,8 +155,11 @@ router.post("/login", async (req, res) => {
 });
 
 
-router.post("/reset",async (req, res) => {
+router.post("/forgot",async (req, res) => {
     try{
+        const {error} = validateUserEmail(req.body);
+        if (error) return res.status(400).send(error.details[0].message);
+
         const email = req.body.email;
         const user = await User.findOne({email: email});
         if(!user){
@@ -178,8 +181,33 @@ router.post("/reset",async (req, res) => {
     }
 });
 
+router.post("/reset",auth,async (req, res) => {
+    try{
+        const user = await User.findById(req.user._id);
+        if(!user){
+            return res.status(404).json({
+                error: "user not found"
+            });
+        }
+        const token = User.generateResetToken();
+        await sendEmail(user.email, token, user.name, "reset");
+        res.json({
+            message: "password reset email sent successfully to your email"
+        });
+    }
+    catch(ex){
+        console.error(ex);
+        res.status(500).json({
+            error: "something went wrong try after some time!",
+        });
+    }
+});
+
 router.post("/reset/:token", resetVerify, async (req, res) => {
     try{
+        const {error} = validateUserPassword(req.body);
+        if (error) return res.status(400).send(error.details[0].message);
+        
         const user = await User.findById(req.user._id);
         if(!user){
             return res.status(404).json({
@@ -201,5 +229,136 @@ router.post("/reset/:token", resetVerify, async (req, res) => {
     }
 });
 
+router.put("/user/profile/edit/username",auth, async (req, res) => {
+    try{
+        const {error} = validateUsername(req.body);
+        if (error) return res.status(400).send(error.details[0].message);
+
+        const user = await User.findById(req.user._id);
+        if (!user) return res.status(400).send("Invalid user.");
+
+        let username = await User.findOne({name: req.body.name});
+        if(username){
+            return res.status(400).json({
+                error: "try different username"
+            });
+        }
+
+        const newUser = await User.findByIdAndUpdate(req.user._id, {
+            name: req.body.name
+        }, {new: true}).select("-password -__v -isAdmin");
+        
+        res.send(newUser);
+    }
+    catch(ex){
+        console.error(ex);
+        res.status(500).json({
+            error: "something went wrong try after some time!", 
+        });
+    }
+
+});
+
+router.put("/user/profile/edit/email",auth, async (req, res) => {
+    try{
+        const {error} = validateUserEmail(req.body);
+        if (error) return res.status(400).send(error.details[0].message);
+
+        const user = await User.findById(req.user._id);
+        if (!user) return res.status(400).send("Invalid user.");
+
+
+        const newUser = await User.findByIdAndUpdate(req.user._id, {
+            email : req.body.name,
+            isVerified : false
+        }, {new: true}).select("-password -__v -isAdmin");
+        
+        res.send(newUser);
+    }
+    catch(ex){
+        console.error(ex);
+        res.status(500).json({
+            error: "something went wrong try after some time!", 
+        });
+    }
+
+});
+
+
+//admin previlages
+
+
+router.get("/get/:pagesize/:pagenum",admin, async (req, res)=> {
+    const pagesize = req.params.pagesize
+    const pagenum = req.params.pagenum
+    const users = await User.find()
+                            .sort("name")
+                            .select("-password -__v")
+                            .skip(pagesize*(pagenum-1))
+                            .limit(pagesize);
+
+});
+
+router.delete("/user/delete/:id" ,admin, async (req, res)=> {
+    const user = await User.findByIdAndRemove(req.params.id);
+    if (!user) return res.status(404).send("The user with the given ID was not found.");
+    res.send("user deleted");
+})
+
+
+router.put("/edit/username/:id",admin, async (req, res) => {
+    try{
+        const {error} = validateUsername(req.body);
+        if (error) return res.status(400).send(error.details[0].message);
+
+        const user = await User.findById(req.params.id);
+        if (!user) return res.status(400).send("Invalid user.");
+
+        let username = await User.findOne({name: req.body.name});
+        if(username){
+            return res.status(400).json({
+                error: "try different username"
+            });
+        }
+
+        const newUser = await User.findByIdAndUpdate(req.user._id, {
+            name: req.body.name
+        }, {new: true}).select("-password -__v -isAdmin");
+        
+        res.send(newUser);
+    }
+    catch(ex){
+        console.error(ex);
+        res.status(500).json({
+            error: "something went wrong try after some time!", 
+        });
+    }
+
+});
+
+router.put("/edit/email/:id",auth, async (req, res) => {
+    try{
+        const {error} = validateUserEmail(req.body);
+        if (error) return res.status(400).send(error.details[0].message);
+
+        const user = await User.findById(req.params.id);
+        if (!user) return res.status(400).send("Invalid user.");
+
+
+        const newUser = await User.findByIdAndUpdate(req.user._id, {
+            email : req.body.name,
+            isVerified : false
+        }, {new: true}).select("-password -__v -isAdmin");
+        
+        res.send(newUser);
+    }
+    catch(ex){
+        console.error(ex);
+        res.status(500).json({
+            error: "something went wrong try after some time!", 
+        });
+    }
+
+});
 
 module.exports = router;
